--- a/views/siloes/show.ejs
+++ b/views/siloes/show.ejs
@@ -174,10 +174,12 @@
 																	</div> <!-- fin 2º row -->
 
 																	<div class="row pie_grupo_items_ensayo">
-																		<div class="col-md-6">
-																			<button type="submit" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></button>
-																		</div>
-																	</div>
+											                            <div class="col-md-1">
+											                                <a class="collapsed" data-toggle="collapse" href="#<%= ensayos[index].id + 10 %>" aria-expanded="true" aria-controls="<%= ensayos[index].id + 10 %>">
+											                                    <h3><span class="glyphicon glyphicon-compressed" aria-hidden="true"></span></h3>
+											                                </a>
+											                            </div>
+											                        </div>
 
 																</div>
 
@@ -356,10 +358,12 @@
 																	</div> <!-- fin 2º row -->
 
 																	<div class="row pie_grupo_items_ensayo">
-																		<div class="col-md-6">
-																			<button type="submit" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></button>
-																		</div>
-																	</div>
+											                            <div class="col-md-1">
+											                                <a class="collapsed" data-toggle="collapse" href="#<%= ensayos[index].id + 100 %>" aria-expanded="true" aria-controls="<%= ensayos[index].id + 100 %>">
+											                                    <h3><span class="glyphicon glyphicon-compressed" aria-hidden="true"></span></h3>
+											                                </a>
+											                            </div>
+											                        </div>
 
 																</div>
 												      		</div>
@@ -501,10 +505,12 @@
 																	</div> <!-- fin 1er row -->
 
 																	<div class="row pie_grupo_items_ensayo">
-																		<div class="col-md-6">
-																			<button type="submit" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></button>
-																		</div>
-																	</div>
+											                            <div class="col-md-1">
+											                                <a class="collapsed" data-toggle="collapse" href="#<%= ensayos[index].id + 1000 %>" aria-expanded="true" aria-controls="<%= ensayos[index].id + 1000 %>">
+											                                    <h3><span class="glyphicon glyphicon-compressed" aria-hidden="true"></span></h3>
+											                                </a>
+											                            </div>
+											                        </div>
 
 																</div>
 													      	</div>
@@ -679,10 +685,12 @@
 																	</div> <!-- fin 2º row -->
 
 																	<div class="row pie_grupo_items_ensayo">
-																		<div class="col-md-6">
-																			<button type="submit" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></button>
-																		</div>
-																	</div>
+											                            <div class="col-md-1">
+											                                <a class="collapsed" data-toggle="collapse" href="#<%= ensayos[index].id + 10000 %>" aria-expanded="true" aria-controls="<%= ensayos[index].id + 10000 %>">
+											                                    <h3><span class="glyphicon glyphicon-compressed" aria-hidden="true"></span></h3>
+											                                </a>
+											                            </div>
+											                        </div>
 
 																</div>
 
@@ -690,7 +698,7 @@
 													    </div>
 													</div> <!-- fin del 4º card -->
 
-												</div>
+												</div> <!-- fin acordeon -->
 
 											</div>
 
