acordeon vasos y siloes

--- a/public/stylesheets/tablet.css
+++ b/public/stylesheets/tablet.css
@@ -98,20 +98,11 @@
     /*  SILOE                 =================================================== */
     /* ========================================================================== */
 
-    .item_ensayo {
-
-		text-align: left;
-
-	}
 
 
 
-    .marco_item_ensayo {
-
-		min-height: 175px;
 
 
-    }
 
 
 
@@ -120,9 +111,18 @@
     /* = ENSAYOS ================================================================ */
     /* ========================================================================== */
 
-    .marco_item_ensayo {
 
-        min-height: 210px;
+    .item_ensayo {
+
+		text-align: left;
+
+	}
+
+
+    .marco_item {
+
+		min-height: 270px;
+
 
     }
 
