--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -136,7 +136,7 @@
 					                            </div>
 											</div>
 
-											<button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Enviar</button>
+											<button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Confirmar</button>
 
 
 										</form>
