--- a/views/siloes/show.ejs
+++ b/views/siloes/show.ejs
@@ -52,7 +52,7 @@
 																<div class="marco_grupo_desplegables">
 																	<div class="row items_ensayo">
 
-																		<div class="col-md-4">
+																		<div class="col-md-4 col-sm-4">
 																			<div class="marco_item">
 																				<div class="form-group">
 																		    		<label for="transparencia" class="col-md-6 control-label">Transparencia
@@ -71,7 +71,7 @@
 																			</div>
 																		</div>
 
-																		<div class="col-md-4">
+																		<div class="col-md-4 col-sm-4">
 																			<div class="marco_item">
 																				<div class="form-group">
 																		    		<label for="extranios" class="col-md-6 control-label">Extraños
@@ -90,7 +90,7 @@
 																			</div>
 																		</div>
 
-																		<div class="col-md-4">
+																		<div class="col-md-4 col-sm-4">
 																			<div class="marco_item">
 																				<div class="form-group">
 																		    		<label for="ecoli" class="col-md-6 control-label">E. Coli
@@ -114,7 +114,7 @@
 
 																	<div class="row items_ensayo">
 
-																		<div class="col-md-4">
+																		<div class="col-md-4 col-sm-4">
 																			<div class="marco_item">
 																				<div class="form-group">
 																		    		<label for="pseudomona" class="col-md-6 control-label">Pseudomona
@@ -133,7 +133,7 @@
 																			</div>
 																		</div>
 
-																		<div class="col-md-4">
+																		<div class="col-md-4 col-sm-4">
 																			<div class="marco_item">
 																				<div class="form-group">
 																					<label for="enterococos" class="col-md-6 control-label">Enterococos
@@ -152,7 +152,7 @@
 																			</div>
 																		</div>
 
-																		<div class="col-md-4">
+																		<div class="col-md-4 col-sm-4">
 																			<div class="marco_item">
 																				<div class="form-group">
 																					<label for="staphlylococcus" class="col-md-6 control-label">Staphlylococcus
@@ -173,18 +173,8 @@
 
 																	</div> <!-- fin 2º row -->
 
-																<!--	<div class="row pie_grupo_items_ensayo">
-											                            <div class="col-md-1">
-											                                <a class="collapsed" data-toggle="collapse" href="#<%= ensayos[index].id + 10 %>" aria-expanded="true" aria-controls="<%= ensayos[index].id + 10 %>">
-											                                    <h3><span class="glyphicon glyphicon-compressed" aria-hidden="true"></span></h3>
-											                                </a>
-											                            </div>
-											                        </div> -->
-
 																</div>
-
 											      			</div>
-
 											    		</div>
 
 											  		</div>  <!-- fin primer card del acordeon -->
@@ -212,7 +202,7 @@
 
 																	<div class="row items_ensayo">
 
-																		<div class="col-md-3">
+																		<div class="col-md-3 col-sm-3">
 																			<% if (ensayos[index].ph_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
@@ -242,7 +232,7 @@
 																			<%}%>
 																		</div>
 
-																		<div class="col-md-3">
+																		<div class="col-md-3 col-sm-3">
 																			<% if (ensayos[index].temp_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
@@ -272,7 +262,7 @@
 																			<%}%>
 																		</div>
 
-																		<div class="col-md-3">
+																		<div class="col-md-3 col-sm-3">
 																			<% if (ensayos[index].turbidez_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
@@ -302,7 +292,7 @@
 																			<%}%>
 																		</div>
 
-																		<div class="col-md-3">
+																		<div class="col-md-3 col-sm-3">
 																			<% if (ensayos[index].recirculacion_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
@@ -335,7 +325,7 @@
 
 																	<div class="row items_ensayo">
 
-																		<div class="col-md-3">
+																		<div class="col-md-3 col-sm-3">
 																			<% if (ensayos[index].redox_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
@@ -365,15 +355,8 @@
 																				</div>
 																			<%}%>
 																		</div>
-																	</div> <!-- fin 2º row -->
 
-																<!--	<div class="row pie_grupo_items_ensayo">
-											                            <div class="col-md-1">
-											                                <a class="collapsed" data-toggle="collapse" href="#<%= ensayos[index].id + 100 %>" aria-expanded="true" aria-controls="<%= ensayos[index].id + 100 %>">
-											                                    <h3><span class="glyphicon glyphicon-compressed" aria-hidden="true"></span></h3>
-											                                </a>
-											                            </div>
-											                        </div> -->
+																	</div> <!-- fin 2º row -->
 
 																</div>
 												      		</div>
@@ -400,7 +383,7 @@
 																<div class="marco_grupo_items">
 																	<div class="row items_ensayo">
 
-																		<div class="col-md-3">
+																		<div class="col-md-3 col-sm-3">
 																			<% if (ensayos[index].cloro_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
@@ -430,7 +413,7 @@
 																			<%}%>
 																		</div>
 
-																		<div class="col-md-3">
+																		<div class="col-md-3 col-sm-3">
 																			<% if (ensayos[index].cloro_combinado_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
@@ -460,7 +443,7 @@
 																			<%}%>
 																		</div>
 
-																		<div class="col-md-3">
+																		<div class="col-md-3 col-sm-3">
 																			<% if (ensayos[index].bromo_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
@@ -490,7 +473,7 @@
 																			<%}%>
 																		</div>
 
-																		<div class="col-md-3">
+																		<div class="col-md-3 col-sm-3">
 																			<% if (ensayos[index].isocianuro_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
@@ -522,14 +505,6 @@
 
 																	</div> <!-- fin 1er row -->
 
-																<!--	<div class="row pie_grupo_items_ensayo">
-											                            <div class="col-md-1">
-											                                <a class="collapsed" data-toggle="collapse" href="#<%= ensayos[index].id + 1000 %>" aria-expanded="true" aria-controls="<%= ensayos[index].id + 1000 %>">
-											                                    <h3><span class="glyphicon glyphicon-compressed" aria-hidden="true"></span></h3>
-											                                </a>
-											                            </div>
-											                        </div> -->
-
 																</div>
 													      	</div>
 													    </div>
@@ -555,7 +530,7 @@
 																<div class="marco_grupo_items">
 																	<div class="row items_ensayo">
 
-																		<div class="col-md-3">
+																		<div class="col-md-3 col-sm-3">
 																			<% if (ensayos[index].humedad_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
@@ -585,7 +560,7 @@
 																			<%}%>
 																		</div>
 
-																		<div class="col-md-3">
+																		<div class="col-md-3 col-sm-3">
 																			<% if (ensayos[index].co2_interior_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
@@ -615,7 +590,7 @@
 																			<%}%>
 																		</div>
 
-																		<div class="col-md-3">
+																		<div class="col-md-3 col-sm-3">
 																			<% if (ensayos[index].co2_exterior_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
@@ -645,7 +620,7 @@
 																			<%}%>
 																		</div>
 
-																		<div class="col-md-3">
+																		<div class="col-md-3 col-sm-3">
 																			<% if (ensayos[index].legionella_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
@@ -679,7 +654,7 @@
 
 																	<div class="row items_ensayo">
 
-																		<div class="col-md-3">
+																		<div class="col-md-3 col-sm-3">
 																			<% if (ensayos[index].langelier_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
@@ -712,16 +687,7 @@
 
 																	</div> <!-- fin 2º row -->
 
-																<!--	<div class="row pie_grupo_items_ensayo">
-											                            <div class="col-md-1">
-											                                <a class="collapsed" data-toggle="collapse" href="#<%= ensayos[index].id + 10000 %>" aria-expanded="true" aria-controls="<%= ensayos[index].id + 10000 %>">
-											                                    <h3><span class="glyphicon glyphicon-compressed" aria-hidden="true"></span></h3>
-											                                </a>
-											                            </div>
-											                        </div> -->
-
 																</div>
-
 													      	</div>
 													    </div>
 													</div> <!-- fin del 4º card -->
@@ -761,7 +727,7 @@
 
 											<div class="container-fluid">
 
-												<button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Enviar</button>
+												<button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Confirmar</button>
 
 											</div>
 
