--- a/views/contadores/_form.ejs
+++ b/views/contadores/_form.ejs
@@ -93,12 +93,12 @@
 
 
 			<li><a class="btn btn_gral btn_cancelar" href="/contadores">
-				Cancelar
+				<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancelar
 			</a></li>
 
 
 			<li><button class="btn btn_gral" type="submit" id="grabar" value="Salvar">
-				Grabar
+				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Grabar
 			</button></li>
 
 		</ul>
