--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -77,11 +77,11 @@
 		<ul class="tira_botones">
 
 			<li><a class="btn btn_gral btn_cancelar" href="/quizes">
-				Cancelar
+				<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancelar
 			</a></li>
 
 			<li><button class="btn btn_gral" type="submit" id="grabar" value="Salvar">
-				Grabar
+				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Grabar
 			</button></li>
 
 		</ul>
