--- a/views/siloes/show.ejs
+++ b/views/siloes/show.ejs
@@ -49,7 +49,7 @@
 
 											    		<div id="<%= ensayos[index].id + 10 %>" class="collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 											      			<div class="card-body">
-																<div class="marco_grupo_desplegables">
+																<div class="marco_grupo_desplegables animated fadeIn">
 																	<div class="row items_ensayo">
 
 																		<div class="col-md-4 col-sm-4">
@@ -198,7 +198,7 @@
 												    	<div id="<%= ensayos[index].id + 100 %>" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion">
 												      		<div class="card-body">
 
-																<div class="marco_grupo_items">
+																<div class="marco_grupo_items animated fadeIn">
 
 																	<div class="row items_ensayo">
 
@@ -380,7 +380,7 @@
 													    </div>
 													    <div id="<%= ensayos[index].id + 1000 %>" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
 													     	<div class="card-body">
-																<div class="marco_grupo_items">
+																<div class="marco_grupo_items animated fadeIn">
 																	<div class="row items_ensayo">
 
 																		<div class="col-md-3 col-sm-3">
@@ -527,7 +527,7 @@
 													    </div>
 													    <div id="<%= ensayos[index].id + 10000 %>" class="collapse" role="tabpanel" aria-labelledby="headingFour" data-parent="#accordion">
 													     	<div class="card-body">
-																<div class="marco_grupo_items">
+																<div class="marco_grupo_items animated fadeIn">
 																	<div class="row items_ensayo">
 
 																		<div class="col-md-3 col-sm-3">
