--- a/views/vasos/_form.ejs
+++ b/views/vasos/_form.ejs
@@ -628,7 +628,7 @@
 
     </div> <!-- fin acordeon -->
 
-    <p>
+    <!-- <p>
         <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#notice" aria-expanded="false" aria-controls="notice">
             <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Info
         </button>
@@ -639,7 +639,7 @@
                 <strong>Precaución!</strong> Los valores actuales de estos campos serán incorporados a los partes de Ensayo diarios.
                 <hr>
                 Cada nuevo Parte de Ensayo de éste vaso se generará con estos valores. Se podrán reajustar según las necesidades de ensayo de cada momento.
-            </div>
+            </div> -->
         </div>
     </div>
 
