--- a/public/stylesheets/pc.css
+++ b/public/stylesheets/pc.css
@@ -14,6 +14,8 @@
 
 	body {
 
+		background-color: #CEE3F6;
+
 		font-family     : 'Kalinga', Calibri, Arial, sans-serif;
 
 	}
@@ -1141,7 +1143,7 @@
 
 
 
-		border: 1px solid #D8D8D8;
+		border: 1px solid #fff;
 		font-size: 14px;
 
 /*		background-color: #3d4045;
@@ -1161,9 +1163,9 @@
 
 
 		font-size: 12px;
-/*		color: white;
-		border-color: rgba(255, 255, 255, 0.05);
-    	background-color: rgba(255, 255, 255, 0.03); */
+		/*color: white;*/
+		/*border-color: rgba(255, 255, 255, 0.05);*/
+    	/*background-color: rgba(255, 255, 255, 0.03);*/
 
 	}
 
@@ -1188,14 +1190,14 @@
 
 
 	.marco_grupo_desplegables {  		/* solo desplegables */
-		border:	1px solid #ddd;
+		border:	1px solid #fff;
 		border-radius: 1.5px;
 		padding: 20px;
 	}
 
 
 	.marco_grupo_items {
-		border:	1px solid #ddd;
+		border:	1px solid #fff;
 		border-radius: 1.5px;
 	}
 
@@ -1204,7 +1206,7 @@
 	.marco_item {
 		min-height: 160px;
 		padding: 20px;
-		border:	1px solid #ddd;
+		border:	1px solid #fff;
 		border-radius: 1.5px;
 		font-size: 12px;
 	}
@@ -1263,7 +1265,7 @@
 	#contador_form, #parte_form, #user_form, #centro_form, #vaso_form, #siloe_form  {
 		max-width: 600px;
 		padding: 20px 20px 20px 20px;
-		border: 1px solid #D8D8D8;
+		border: 1px solid #fff;
 		border-radius: 1.5px;
 	}
 
@@ -1365,7 +1367,7 @@
 		max-width: 600px;
 		margin: 20vh auto 0px auto;
 
-
+		background-color: white;
 		border: 1px solid #ccc;
 
 	}
