--- a/public/stylesheets/pc.css
+++ b/public/stylesheets/pc.css
@@ -14,11 +14,15 @@
 
 	body {
 
-		background-color: #CEE3F6;
+		/*background-color: #CEE3F6;*/
+		background-color: #424242;
 
 		font-family     : 'Kalinga', Calibri, Arial, sans-serif;
+		color: #BDBDBD;
 
 	}
+
+
 
 
 	.panel {
@@ -44,17 +48,82 @@
 
 
 
+	/* =========================== TABLAS COLORES CLAROS ========================================= */
+
+/*	table {
+
+		color: #2E2E2E;
+
+	}
+
+
 
 	.table-striped > tbody > tr:nth-of-type(2n+1) {			/* estilo de los row impares de todas las tablas */
 
-		padding: 5px;
+/*		padding: 5px;
 		background-color: #EFF5FB;
 
 	}
 
 	.table-striped > tbody > tr:hover {						/* estilo de los row :hover de todas las tablas */
 
-		background-color: #CEE3F6;
+/*		background-color: #CEE3F6;
+		-moz-transition: all 0.3s;
+		-o-transition: all 0.3s;
+		-webkit-transition: all 0.3s;
+		transition: all 0.3s;
+
+	}
+
+	.table > tbody > tr > td {								/*  estilo de los row de todas las tablas */
+
+/*		padding: 5px;
+		border: none;
+
+	}
+
+	.table > thead > tr > th {
+
+
+		border-bottom: 1px solid #ddd;					/* borde del thead */
+
+
+/*	} */
+
+
+
+	/* =========================== TABLAS COLORES OSCUROS ========================================= */
+
+	table {
+
+		color: #424242;
+		background-color: #848484;
+
+	}
+
+	table a {
+
+		color: #424242;
+
+	}
+
+
+	.table-striped > tbody > tr:nth-of-type(2n+1) {			/* estilo de los row impares de todas las tablas */
+
+		padding: 5px;
+		background-color: #A4A4A4;
+
+	}
+	.table-striped > tbody > tr:nth-of-type(2n+0) {			/* estilo de los row pares de todas las tablas */
+
+		padding: 5px;
+		background-color: #848484;
+
+	}
+
+	.table-striped > tbody > tr:hover {						/* estilo de los row :hover de todas las tablas */
+
+		background-color: #6E6E6E;
 		-moz-transition: all 0.3s;
 		-o-transition: all 0.3s;
 		-webkit-transition: all 0.3s;
@@ -76,6 +145,10 @@
 
 
 	}
+
+
+
+
 
 
 	a:active, a:focus, a:hover {
@@ -1143,7 +1216,7 @@
 
 
 
-		border: 1px solid #fff;
+		border: 1px solid #BDBDBD;
 		font-size: 14px;
 
 /*		background-color: #3d4045;
@@ -1153,10 +1226,6 @@
 	}
 
 
-	.ensayo-panel input {
-
-
-	}
 
 
 	.ensayo-panel input, .ensayo-panel textarea {
@@ -1168,8 +1237,6 @@
     	/*background-color: rgba(255, 255, 255, 0.03);*/
 
 	}
-
-
 
 
 
@@ -1190,14 +1257,14 @@
 
 
 	.marco_grupo_desplegables {  		/* solo desplegables */
-		border:	1px solid #fff;
+		/*border:	1px solid #BDBDBD;*/
 		border-radius: 1.5px;
 		padding: 20px;
 	}
 
 
 	.marco_grupo_items {
-		border:	1px solid #fff;
+		/*border:	1px solid #BDBDBD;*/
 		border-radius: 1.5px;
 	}
 
@@ -1206,7 +1273,7 @@
 	.marco_item {
 		min-height: 160px;
 		padding: 20px;
-		border:	1px solid #fff;
+		border:	1px solid #BDBDBD;
 		border-radius: 1.5px;
 		font-size: 12px;
 	}
